lab-06/Syntax/Nameless/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Syntax/Nameless/Par.y
-----------------------------------------------------------------------------

state 22 contains 1 shift/reduce conflicts and 4 reduce/reduce conflicts.
state 67 contains 1 shift/reduce conflicts.

rule 21 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pExpr -> Expr                               (1)
	%start_pExpr0 -> Expr0                             (2)
	%start_pListExpr0 -> ListExpr0                     (3)
	%start_pExpr1 -> Expr1                             (4)
	%start_pExpr2 -> Expr2                             (5)
	%start_pExpr3 -> Expr3                             (6)
	%start_pStore -> Store                             (7)
	%start_pAssignment -> Assignment                   (8)
	%start_pListAssignment -> ListAssignment           (9)
	%start_pStoreTyping -> StoreTyping                 (10)
	%start_pLocationTyping -> LocationTyping           (11)
	%start_pListLocationTyping -> ListLocationTyping   (12)
	%start_pType -> Type                               (13)
	%start_pType1 -> Type1                             (14)
	%start_pType2 -> Type2                             (15)
	%start_pTyping -> Typing                           (16)
	Ident -> L_Ident                                   (17)
	Integer -> L_integ                                 (18)
	Program -> Expr                                    (19)
	Expr -> ListExpr0                                  (20)
	Expr -> Expr0                                      (21)
	Expr0 -> 'if' Expr0 'then' Expr0 'else' Expr0      (22)
	Expr0 -> 'fun' '(' Type ')' '{' 'return' Expr0 '}'   (23)
	Expr0 -> Expr1 ':=' Expr0                          (24)
	Expr0 -> Expr1                                     (25)
	ListExpr0 ->                                       (26)
	ListExpr0 -> Expr0                                 (27)
	ListExpr0 -> Expr0 ';' ListExpr0                   (28)
	Expr1 -> Expr1 Expr2                               (29)
	Expr1 -> Expr2                                     (30)
	Expr2 -> 'ref' Expr3                               (31)
	Expr2 -> '!' Expr3                                 (32)
	Expr2 -> 'succ' Expr3                              (33)
	Expr2 -> 'pred' Expr3                              (34)
	Expr2 -> 'iszero' Expr3                            (35)
	Expr2 -> Expr3                                     (36)
	Expr3 -> 'unit'                                    (37)
	Expr3 -> 'true'                                    (38)
	Expr3 -> 'false'                                   (39)
	Expr3 -> '0'                                       (40)
	Expr3 -> Ident                                     (41)
	Expr3 -> Integer                                   (42)
	Expr3 -> '#' Integer                               (43)
	Expr3 -> '(' Expr ')'                              (44)
	Store -> '{' ListAssignment '}'                    (45)
	Assignment -> '#' Integer '=' Expr                 (46)
	ListAssignment ->                                  (47)
	ListAssignment -> Assignment                       (48)
	ListAssignment -> Assignment ';' ListAssignment    (49)
	StoreTyping -> '{' ListLocationTyping '}'          (50)
	LocationTyping -> '#' Integer ':' Type             (51)
	ListLocationTyping ->                              (52)
	ListLocationTyping -> LocationTyping               (53)
	ListLocationTyping -> LocationTyping ';' ListLocationTyping   (54)
	Type -> Type1 '->' Type                            (55)
	Type -> Type1                                      (56)
	Type1 -> 'Ref' Type2                               (57)
	Type1 -> Type2                                     (58)
	Type2 -> 'Bool'                                    (59)
	Type2 -> 'Nat'                                     (60)
	Type2 -> 'Unit'                                    (61)
	Type2 -> '(' Type ')'                              (62)
	Typing -> Expr ':' Type                            (63)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'#'            { PT _ (TS _ 2) }
	'('            { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'->'           { PT _ (TS _ 5) }
	'0'            { PT _ (TS _ 6) }
	':'            { PT _ (TS _ 7) }
	':='           { PT _ (TS _ 8) }
	';'            { PT _ (TS _ 9) }
	'='            { PT _ (TS _ 10) }
	'Bool'         { PT _ (TS _ 11) }
	'Nat'          { PT _ (TS _ 12) }
	'Ref'          { PT _ (TS _ 13) }
	'Unit'         { PT _ (TS _ 14) }
	'else'         { PT _ (TS _ 15) }
	'false'        { PT _ (TS _ 16) }
	'fun'          { PT _ (TS _ 17) }
	'if'           { PT _ (TS _ 18) }
	'iszero'       { PT _ (TS _ 19) }
	'pred'         { PT _ (TS _ 20) }
	'ref'          { PT _ (TS _ 21) }
	'return'       { PT _ (TS _ 22) }
	'succ'         { PT _ (TS _ 23) }
	'then'         { PT _ (TS _ 24) }
	'true'         { PT _ (TS _ 25) }
	'unit'         { PT _ (TS _ 26) }
	'{'            { PT _ (TS _ 27) }
	'}'            { PT _ (TS _ 28) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pExpr    rule  1
	%start_pExpr0   rule  2
	%start_pListExpr0 rule  3
	%start_pExpr1   rule  4
	%start_pExpr2   rule  5
	%start_pExpr3   rule  6
	%start_pStore   rule  7
	%start_pAssignment rule  8
	%start_pListAssignment rule  9
	%start_pStoreTyping rule  10
	%start_pLocationTyping rule  11
	%start_pListLocationTyping rule  12
	%start_pType    rule  13
	%start_pType1   rule  14
	%start_pType2   rule  15
	%start_pTyping  rule  16
	Ident           rule  17
	Integer         rule  18
	Program         rule  19
	Expr            rules 20, 21
	Expr0           rules 22, 23, 24, 25
	ListExpr0       rules 26, 27, 28
	Expr1           rules 29, 30
	Expr2           rules 31, 32, 33, 34, 35, 36
	Expr3           rules 37, 38, 39, 40, 41, 42, 43, 44
	Store           rule  45
	Assignment      rule  46
	ListAssignment  rules 47, 48, 49
	StoreTyping     rule  50
	LocationTyping  rule  51
	ListLocationTyping rules 52, 53, 54
	Type            rules 55, 56
	Type1           rules 57, 58
	Type2           rules 59, 60, 61, 62
	Typing          rule  63

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41
	%eof           reduce using rule 26

	Ident          goto state 19
	Integer        goto state 20
	Program        goto state 71
	Expr           goto state 72
	Expr0          goto state 22
	ListExpr0      goto state 23
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26

State 1

	%start_pExpr -> . Expr                              (rule 1)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41
	%eof           reduce using rule 26

	Ident          goto state 19
	Integer        goto state 20
	Expr           goto state 70
	Expr0          goto state 22
	ListExpr0      goto state 23
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26

State 2

	%start_pExpr0 -> . Expr0                            (rule 2)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr0          goto state 69
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26

State 3

	%start_pListExpr0 -> . ListExpr0                    (rule 3)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41
	%eof           reduce using rule 26

	Ident          goto state 19
	Integer        goto state 20
	Expr0          goto state 67
	ListExpr0      goto state 68
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26

State 4

	%start_pExpr1 -> . Expr1                            (rule 4)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr1          goto state 66
	Expr2          goto state 25
	Expr3          goto state 26

State 5

	%start_pExpr2 -> . Expr2                            (rule 5)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 65
	Expr3          goto state 26

State 6

	%start_pExpr3 -> . Expr3                            (rule 6)

	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr3          goto state 64

State 7

	%start_pStore -> . Store                            (rule 7)

	'{'            shift, and enter state 63

	Store          goto state 62

State 8

	%start_pAssignment -> . Assignment                  (rule 8)

	'#'            shift, and enter state 60

	Assignment     goto state 61

State 9

	%start_pListAssignment -> . ListAssignment          (rule 9)

	'#'            shift, and enter state 60
	%eof           reduce using rule 47

	Assignment     goto state 58
	ListAssignment goto state 59

State 10

	%start_pStoreTyping -> . StoreTyping                (rule 10)

	'{'            shift, and enter state 57

	StoreTyping    goto state 56

State 11

	%start_pLocationTyping -> . LocationTyping          (rule 11)

	'#'            shift, and enter state 54

	LocationTyping goto state 55

State 12

	%start_pListLocationTyping -> . ListLocationTyping    (rule 12)

	'#'            shift, and enter state 54
	%eof           reduce using rule 52

	LocationTyping goto state 52
	ListLocationTypinggoto state 53

State 13

	%start_pType -> . Type                              (rule 13)

	'('            shift, and enter state 43
	'Bool'         shift, and enter state 44
	'Nat'          shift, and enter state 45
	'Ref'          shift, and enter state 49
	'Unit'         shift, and enter state 46

	Type           goto state 50
	Type1          goto state 51
	Type2          goto state 48

State 14

	%start_pType1 -> . Type1                            (rule 14)

	'('            shift, and enter state 43
	'Bool'         shift, and enter state 44
	'Nat'          shift, and enter state 45
	'Ref'          shift, and enter state 49
	'Unit'         shift, and enter state 46

	Type1          goto state 47
	Type2          goto state 48

State 15

	%start_pType2 -> . Type2                            (rule 15)

	'('            shift, and enter state 43
	'Bool'         shift, and enter state 44
	'Nat'          shift, and enter state 45
	'Unit'         shift, and enter state 46

	Type2          goto state 42

State 16

	%start_pTyping -> . Typing                          (rule 16)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	':'            reduce using rule 26
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr           goto state 21
	Expr0          goto state 22
	ListExpr0      goto state 23
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26
	Typing         goto state 27

State 17

	Ident -> . L_Ident                                  (rule 17)

	L_Ident        shift, and enter state 18


State 18

	Ident -> L_Ident .                                  (rule 17)

	'!'            reduce using rule 17
	'#'            reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'0'            reduce using rule 17
	':'            reduce using rule 17
	':='           reduce using rule 17
	';'            reduce using rule 17
	'else'         reduce using rule 17
	'false'        reduce using rule 17
	'iszero'       reduce using rule 17
	'pred'         reduce using rule 17
	'ref'          reduce using rule 17
	'succ'         reduce using rule 17
	'then'         reduce using rule 17
	'true'         reduce using rule 17
	'unit'         reduce using rule 17
	'}'            reduce using rule 17
	L_Ident        reduce using rule 17
	L_integ        reduce using rule 17
	%eof           reduce using rule 17


State 19

	Expr3 -> Ident .                                    (rule 41)

	'!'            reduce using rule 41
	'#'            reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'0'            reduce using rule 41
	':'            reduce using rule 41
	':='           reduce using rule 41
	';'            reduce using rule 41
	'else'         reduce using rule 41
	'false'        reduce using rule 41
	'iszero'       reduce using rule 41
	'pred'         reduce using rule 41
	'ref'          reduce using rule 41
	'succ'         reduce using rule 41
	'then'         reduce using rule 41
	'true'         reduce using rule 41
	'unit'         reduce using rule 41
	'}'            reduce using rule 41
	L_Ident        reduce using rule 41
	L_integ        reduce using rule 41
	%eof           reduce using rule 41


State 20

	Expr3 -> Integer .                                  (rule 42)

	'!'            reduce using rule 42
	'#'            reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'0'            reduce using rule 42
	':'            reduce using rule 42
	':='           reduce using rule 42
	';'            reduce using rule 42
	'else'         reduce using rule 42
	'false'        reduce using rule 42
	'iszero'       reduce using rule 42
	'pred'         reduce using rule 42
	'ref'          reduce using rule 42
	'succ'         reduce using rule 42
	'then'         reduce using rule 42
	'true'         reduce using rule 42
	'unit'         reduce using rule 42
	'}'            reduce using rule 42
	L_Ident        reduce using rule 42
	L_integ        reduce using rule 42
	%eof           reduce using rule 42


State 21

	Typing -> Expr . ':' Type                           (rule 63)

	':'            shift, and enter state 94


State 22

	Expr -> Expr0 .                                     (rule 21)
	ListExpr0 -> Expr0 .                                (rule 27)
	ListExpr0 -> Expr0 . ';' ListExpr0                  (rule 28)

	')'            reduce using rule 27
			(reduce using rule 21)

	':'            reduce using rule 27
			(reduce using rule 21)

	';'            shift, and enter state 73
			(reduce using rule 27)
			(reduce using rule 21)

	'}'            reduce using rule 27
			(reduce using rule 21)

	%eof           reduce using rule 27
			(reduce using rule 21)



State 23

	Expr -> ListExpr0 .                                 (rule 20)

	')'            reduce using rule 20
	':'            reduce using rule 20
	';'            reduce using rule 20
	'}'            reduce using rule 20
	%eof           reduce using rule 20


State 24

	Expr0 -> Expr1 . ':=' Expr0                         (rule 24)
	Expr0 -> Expr1 .                                    (rule 25)
	Expr1 -> Expr1 . Expr2                              (rule 29)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	')'            reduce using rule 25
	'0'            shift, and enter state 31
	':'            reduce using rule 25
	':='           shift, and enter state 93
	';'            reduce using rule 25
	'else'         reduce using rule 25
	'false'        shift, and enter state 32
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'then'         reduce using rule 25
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	'}'            reduce using rule 25
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41
	%eof           reduce using rule 25

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 74
	Expr3          goto state 26

State 25

	Expr1 -> Expr2 .                                    (rule 30)

	'!'            reduce using rule 30
	'#'            reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'0'            reduce using rule 30
	':'            reduce using rule 30
	':='           reduce using rule 30
	';'            reduce using rule 30
	'else'         reduce using rule 30
	'false'        reduce using rule 30
	'iszero'       reduce using rule 30
	'pred'         reduce using rule 30
	'ref'          reduce using rule 30
	'succ'         reduce using rule 30
	'then'         reduce using rule 30
	'true'         reduce using rule 30
	'unit'         reduce using rule 30
	'}'            reduce using rule 30
	L_Ident        reduce using rule 30
	L_integ        reduce using rule 30
	%eof           reduce using rule 30


State 26

	Expr2 -> Expr3 .                                    (rule 36)

	'!'            reduce using rule 36
	'#'            reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'0'            reduce using rule 36
	':'            reduce using rule 36
	':='           reduce using rule 36
	';'            reduce using rule 36
	'else'         reduce using rule 36
	'false'        reduce using rule 36
	'iszero'       reduce using rule 36
	'pred'         reduce using rule 36
	'ref'          reduce using rule 36
	'succ'         reduce using rule 36
	'then'         reduce using rule 36
	'true'         reduce using rule 36
	'unit'         reduce using rule 36
	'}'            reduce using rule 36
	L_Ident        reduce using rule 36
	L_integ        reduce using rule 36
	%eof           reduce using rule 36


State 27

	%start_pTyping -> Typing .                          (rule 16)

	%eof           accept


State 28

	Expr2 -> '!' . Expr3                                (rule 32)

	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr3          goto state 92

State 29

	Expr3 -> '#' . Integer                              (rule 43)

	L_integ        shift, and enter state 41

	Integer        goto state 91

State 30

	Expr3 -> '(' . Expr ')'                             (rule 44)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	')'            reduce using rule 26
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr           goto state 90
	Expr0          goto state 22
	ListExpr0      goto state 23
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26

State 31

	Expr3 -> '0' .                                      (rule 40)

	'!'            reduce using rule 40
	'#'            reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'0'            reduce using rule 40
	':'            reduce using rule 40
	':='           reduce using rule 40
	';'            reduce using rule 40
	'else'         reduce using rule 40
	'false'        reduce using rule 40
	'iszero'       reduce using rule 40
	'pred'         reduce using rule 40
	'ref'          reduce using rule 40
	'succ'         reduce using rule 40
	'then'         reduce using rule 40
	'true'         reduce using rule 40
	'unit'         reduce using rule 40
	'}'            reduce using rule 40
	L_Ident        reduce using rule 40
	L_integ        reduce using rule 40
	%eof           reduce using rule 40


State 32

	Expr3 -> 'false' .                                  (rule 39)

	'!'            reduce using rule 39
	'#'            reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'0'            reduce using rule 39
	':'            reduce using rule 39
	':='           reduce using rule 39
	';'            reduce using rule 39
	'else'         reduce using rule 39
	'false'        reduce using rule 39
	'iszero'       reduce using rule 39
	'pred'         reduce using rule 39
	'ref'          reduce using rule 39
	'succ'         reduce using rule 39
	'then'         reduce using rule 39
	'true'         reduce using rule 39
	'unit'         reduce using rule 39
	'}'            reduce using rule 39
	L_Ident        reduce using rule 39
	L_integ        reduce using rule 39
	%eof           reduce using rule 39


State 33

	Expr0 -> 'fun' . '(' Type ')' '{' 'return' Expr0 '}'    (rule 23)

	'('            shift, and enter state 89


State 34

	Expr0 -> 'if' . Expr0 'then' Expr0 'else' Expr0     (rule 22)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'fun'          shift, and enter state 33
	'if'           shift, and enter state 34
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr0          goto state 88
	Expr1          goto state 24
	Expr2          goto state 25
	Expr3          goto state 26

State 35

	Expr2 -> 'iszero' . Expr3                           (rule 35)

	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr3          goto state 87

State 36

	Expr2 -> 'pred' . Expr3                             (rule 34)

	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr3          goto state 86

State 37

	Expr2 -> 'ref' . Expr3                              (rule 31)

	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr3          goto state 85

State 38

	Expr2 -> 'succ' . Expr3                             (rule 33)

	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41

	Ident          goto state 19
	Integer        goto state 20
	Expr3          goto state 84

State 39

	Expr3 -> 'true' .                                   (rule 38)

	'!'            reduce using rule 38
	'#'            reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	'0'            reduce using rule 38
	':'            reduce using rule 38
	':='           reduce using rule 38
	';'            reduce using rule 38
	'else'         reduce using rule 38
	'false'        reduce using rule 38
	'iszero'       reduce using rule 38
	'pred'         reduce using rule 38
	'ref'          reduce using rule 38
	'succ'         reduce using rule 38
	'then'         reduce using rule 38
	'true'         reduce using rule 38
	'unit'         reduce using rule 38
	'}'            reduce using rule 38
	L_Ident        reduce using rule 38
	L_integ        reduce using rule 38
	%eof           reduce using rule 38


State 40

	Expr3 -> 'unit' .                                   (rule 37)

	'!'            reduce using rule 37
	'#'            reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'0'            reduce using rule 37
	':'            reduce using rule 37
	':='           reduce using rule 37
	';'            reduce using rule 37
	'else'         reduce using rule 37
	'false'        reduce using rule 37
	'iszero'       reduce using rule 37
	'pred'         reduce using rule 37
	'ref'          reduce using rule 37
	'succ'         reduce using rule 37
	'then'         reduce using rule 37
	'true'         reduce using rule 37
	'unit'         reduce using rule 37
	'}'            reduce using rule 37
	L_Ident        reduce using rule 37
	L_integ        reduce using rule 37
	%eof           reduce using rule 37


State 41

	Integer -> L_integ .                                (rule 18)

	'!'            reduce using rule 18
	'#'            reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'0'            reduce using rule 18
	':'            reduce using rule 18
	':='           reduce using rule 18
	';'            reduce using rule 18
	'='            reduce using rule 18
	'else'         reduce using rule 18
	'false'        reduce using rule 18
	'iszero'       reduce using rule 18
	'pred'         reduce using rule 18
	'ref'          reduce using rule 18
	'succ'         reduce using rule 18
	'then'         reduce using rule 18
	'true'         reduce using rule 18
	'unit'         reduce using rule 18
	'}'            reduce using rule 18
	L_Ident        reduce using rule 18
	L_integ        reduce using rule 18
	%eof           reduce using rule 18


State 42

	%start_pType2 -> Type2 .                            (rule 15)

	%eof           accept


State 43

	Type2 -> '(' . Type ')'                             (rule 62)

	'('            shift, and enter state 43
	'Bool'         shift, and enter state 44
	'Nat'          shift, and enter state 45
	'Ref'          shift, and enter state 49
	'Unit'         shift, and enter state 46

	Type           goto state 83
	Type1          goto state 51
	Type2          goto state 48

State 44

	Type2 -> 'Bool' .                                   (rule 59)

	')'            reduce using rule 59
	'->'           reduce using rule 59
	';'            reduce using rule 59
	'}'            reduce using rule 59
	%eof           reduce using rule 59


State 45

	Type2 -> 'Nat' .                                    (rule 60)

	')'            reduce using rule 60
	'->'           reduce using rule 60
	';'            reduce using rule 60
	'}'            reduce using rule 60
	%eof           reduce using rule 60


State 46

	Type2 -> 'Unit' .                                   (rule 61)

	')'            reduce using rule 61
	'->'           reduce using rule 61
	';'            reduce using rule 61
	'}'            reduce using rule 61
	%eof           reduce using rule 61


State 47

	%start_pType1 -> Type1 .                            (rule 14)

	%eof           accept


State 48

	Type1 -> Type2 .                                    (rule 58)

	')'            reduce using rule 58
	'->'           reduce using rule 58
	';'            reduce using rule 58
	'}'            reduce using rule 58
	%eof           reduce using rule 58


State 49

	Type1 -> 'Ref' . Type2                              (rule 57)

	'('            shift, and enter state 43
	'Bool'         shift, and enter state 44
	'Nat'          shift, and enter state 45
	'Unit'         shift, and enter state 46

	Type2          goto state 82

State 50

	%start_pType -> Type .                              (rule 13)

	%eof           accept


State 51

	Type -> Type1 . '->' Type                           (rule 55)
	Type -> Type1 .                                     (rule 56)

	')'            reduce using rule 56
	'->'           shift, and enter state 81
	';'            reduce using rule 56
	'}'            reduce using rule 56
	%eof           reduce using rule 56


State 52

	ListLocationTyping -> LocationTyping .              (rule 53)
	ListLocationTyping -> LocationTyping . ';' ListLocationTyping    (rule 54)

	';'            shift, and enter state 80
	'}'            reduce using rule 53
	%eof           reduce using rule 53


State 53

	%start_pListLocationTyping -> ListLocationTyping .    (rule 12)

	%eof           accept


State 54

	LocationTyping -> '#' . Integer ':' Type            (rule 51)

	L_integ        shift, and enter state 41

	Integer        goto state 79

State 55

	%start_pLocationTyping -> LocationTyping .          (rule 11)

	%eof           accept


State 56

	%start_pStoreTyping -> StoreTyping .                (rule 10)

	%eof           accept


State 57

	StoreTyping -> '{' . ListLocationTyping '}'         (rule 50)

	'#'            shift, and enter state 54
	'}'            reduce using rule 52

	LocationTyping goto state 52
	ListLocationTypinggoto state 78

State 58

	ListAssignment -> Assignment .                      (rule 48)
	ListAssignment -> Assignment . ';' ListAssignment    (rule 49)

	';'            shift, and enter state 77
	'}'            reduce using rule 48
	%eof           reduce using rule 48


State 59

	%start_pListAssignment -> ListAssignment .          (rule 9)

	%eof           accept


State 60

	Assignment -> '#' . Integer '=' Expr                (rule 46)

	L_integ        shift, and enter state 41

	Integer        goto state 76

State 61

	%start_pAssignment -> Assignment .                  (rule 8)

	%eof           accept


State 62

	%start_pStore -> Store .                            (rule 7)

	%eof           accept


State 63

	Store -> '{' . ListAssignment '}'                   (rule 45)

	'#'            shift, and enter state 60
	'}'            reduce using rule 47

	Assignment     goto state 58
	ListAssignment goto state 75

State 64

	%start_pExpr3 -> Expr3 .                            (rule 6)

	%eof           accept


State 65

	%start_pExpr2 -> Expr2 .                            (rule 5)

	%eof           accept


State 66

	%start_pExpr1 -> Expr1 .                            (rule 4)
	Expr1 -> Expr1 . Expr2                              (rule 29)

	'!'            shift, and enter state 28
	'#'            shift, and enter state 29
	'('            shift, and enter state 30
	'0'            shift, and enter state 31
	'false'        shift, and enter state 32
	'iszero'       shift, and enter state 35
	'pred'         shift, and enter state 36
	'ref'          shift, and enter state 37
	'succ'         shift, and enter state 38
	'true'         shift, and enter state 39
	'unit'         shift, and enter state 40
	L_Ident        shift, and enter state 18
	L_integ        shift, and enter state 41
	%eof           accept

	Ident          goto state 19
	Integer        goto state 20
	Expr2          goto state 74
	Expr3          goto state 26

State 67

	ListExpr0 -> Expr0 .                                (rule 27)
	ListExpr0 -> Expr0 . ';' ListExpr0                  (rule 28)

	')'            reduce using rule 27
	':'            reduce using rule 27
	';'            shift, and enter state 73
			(reduce using rule 27)

	'}'            reduce using rule 27
	%eof           reduce using rule 27


State 68

	%start_pListExpr0 -> ListExpr0 .                    (rule 3)

	%eof           accept


State 69

	%start_pExpr0 -> Expr0 .                            (rule 2)

	%eof           accept


State 70

	%start_pExpr -> Expr .                              (rule 1)

	%eof           accept


State 71

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 72

	Program -> Expr .                                   (rule 19)

	%eof           reduce using rule 19


State 73

	ListExpr0 -> Expr0 ';' . ListExpr0                  (rule 28)
